# GISV2

./: .env.prod.example  .gitignore  GUIDE_MIGRATION_PRODUCTION.md  MIGRATION_PRODUCTION.sql  README.md  RESUME_TRAVAUX_26_JANVIER_2026.txt  SPECIFICATIONS_BACKEND_JANVIER_2026.txt  TRAVAUX_22_JANVIER_2026.txt  add-user.sql  assign-vehicles.sql  calypso-migration-complete.sql  calypso-subscription-cleanup.sql  check_admin_users.sql  check_user.sql  create-admin-dummy.sql  create-admin-dummy2.sql  docker-compose.prod.yml  docker-compose.yaml  drop-subscription-id.sql  fix-admin-password.sql  fix-columns.sql  fix-company.sql  fix-geofence-groups.sql  fix_sysadmin_permissions.sql  fix_vehicles.sql  gis_v2_backup_20260121_144111.sql  gis_v2_backup_full.dump  migrate-vehicles.sql  ngrok.yml  package.json  poi_visits.sql  rabbitmq-definitions.json  temp_migration.sql  test-api.ps1  test-login.ps1  unify-vehicles.sql
TempHash/: Program.cs
docs/: ingestion_progress.md
init-db/: 01-schema.sql  02-seed-data.sql
scripts/: prepare-osrm.ps1  (+1 more)
services/gps-ingest-rust/: .env  .env.docker  Cargo.toml  Dockerfile
services/gps-ingest-rust/config/: listeners.yaml
services/gps-ingest-rust/src/: api.rs  config.rs  db.rs  main.rs  ports.rs  publisher.rs  telemetry.rs  transport.rs
services/gps-ingest-rust/src/services/: daily_statistics.rs  driving_events.rs  fuel_tracker.rs  gap_filler.rs  geocoding.rs  geofence_detector.rs  gps_stabilizer.rs  gps_validator.rs  mod.rs  stop_detector.rs  trip_detector.rs
services/gps-ingest-rust/src/telemetry/: aap.rs  hh.rs  model.rs
(+565 files in other folders)
