[package]
name = "gps-ingest-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
amqprs = "1"
async-trait = "0.1"
prost = "0.12"
prost-types = "0.12"
thiserror = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
dotenvy = "0.15"
serde_yaml = "0.9"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
lru = "0.12"
reqwest = { version = "0.11", features = ["json"] }
